@@ -39,6 +39,16 @@ scrollWheelPercentage = 0.30
 # whether to revert scroll direction
 scrollWheelInvert = false
 
+[seismic_phases]
+# keys: phase hint (case sensitive)
+# values: color specification understood by matplotlib.colors.ColorConverter.to_rgb()
+#         (matplotlib color names, hex color strings, ...)
+# please note that some parts might (especially interactions with location routines etc.)
+# very likely use hard coded 'P' and 'S' phases so check if you're getting the
+# expected results when using other phase names! Modify at your own risk!
+P = red
+S = blue
+
 [station_combinations]
 EXAMPLE1 = II.PFO.00.LH?,GE.APE..LH?,GE.PSZ..LH?,CI.BBR..LH*,IV.PRMA..LH?,G.RER..LH*
 EXAMPLE2 = 7A.W01..LH?,CI.BBR..LH*
