@@ -19,6 +19,7 @@ import socket
 import sys
 import tempfile
 import warnings
+from collections import OrderedDict
 from ConfigParser import SafeConfigParser, NoOptionError
 from StringIO import StringIO
 
@@ -80,6 +81,10 @@ class ObsPyck(QtGui.QMainWindow):
         self.keys = keys
         self.config = config
 
+        # make a mapping of seismic phases to colors as specified in config
+        self.seismic_phases = OrderedDict(config.items('seismic_phases'))
+        self._magnitude_color = config.get('base', 'magnitude_pick_color')
+
         # T0 is the global reference time (zero in relative time scales)
         if options.time is not None:
             self.T0 = UTCDateTime(options.time)
@@ -115,11 +120,15 @@ class ObsPyck(QtGui.QMainWindow):
         # Needs to be done pretty much at the beginning because some other
         # stuff relies on the phase type being set.
         pixmap = QtGui.QPixmap(70, 50)
-        for phase_type in list(SEISMIC_PHASES) + ['Mag']:
-            rgb = matplotlib_color_to_rgb(PHASE_COLORS[phase_type])
+        for phase_type, color in self.seismic_phases.items():
+            rgb = matplotlib_color_to_rgb(color)
             pixmap.fill(QtGui.QColor(*rgb))
             icon = QtGui.QIcon(pixmap)
             self.widgets.qComboBox_phaseType.addItem(icon, phase_type)
+        rgb = matplotlib_color_to_rgb(self._magnitude_color)
+        pixmap.fill(QtGui.QColor(*rgb))
+        icon = QtGui.QIcon(pixmap)
+        self.widgets.qComboBox_phaseType.addItem(icon, 'Mag')
 
         self.qMain = self.widgets.centralwidget
         # Add write methods to stdout/stderr text edits in GUI displays to
@@ -1143,7 +1152,7 @@ class ObsPyck(QtGui.QMainWindow):
             va = "bottom"
             bbox_fc = "lightgray"
         i = self.axs.index(ax)
-        color = PHASE_COLORS[pick.phase_hint]
+        color = self.seismic_phases[pick.phase_hint]
         bbox = dict(boxstyle="round,pad=0.4", fc=bbox_fc, ec="k", lw=1, alpha=1.0)
         ax.text(x, y, label, transform=self.trans[i], color=color,
                 family='monospace', va=va, bbox=bbox, size="large",
@@ -1440,7 +1449,7 @@ class ObsPyck(QtGui.QMainWindow):
             self.debug(str(ev.inaxes.lines[0].get_ydata()[xpos]))
 
         if ev.key == keys['setPick']:
-            if phase_type in SEISMIC_PHASES:
+            if phase_type in self.seismic_phases:
                 pick = self.getPick(axes=ev.inaxes, phase_hint=phase_type,
                                     setdefault=True, seed_string=tr.id)
                 self.debug(map(str, [ev.inaxes, self.axs, phase_type, tr.id]))
@@ -1464,7 +1473,7 @@ class ObsPyck(QtGui.QMainWindow):
 
         if ev.key in (keys['setWeight0'], keys['setWeight1'],
                       keys['setWeight2'], keys['setWeight3']):
-            if phase_type in SEISMIC_PHASES:
+            if phase_type in self.seismic_phases:
                 if pick is None:
                     return
                 if ev.key == keys['setWeight0']:
@@ -1485,7 +1494,7 @@ class ObsPyck(QtGui.QMainWindow):
                 return
 
         if ev.key in (keys['setPolU'], keys['setPolD']):
-            if phase_type in SEISMIC_PHASES:
+            if phase_type in self.seismic_phases:
                 if pick is None:
                     return
                 if ev.key == keys['setPolU']:
@@ -1512,7 +1521,7 @@ class ObsPyck(QtGui.QMainWindow):
                 return
 
         if ev.key in (keys['setOnsetI'], keys['setOnsetE']):
-            if phase_type in SEISMIC_PHASES:
+            if phase_type in self.seismic_phases:
                 if pick is None:
                     return
                 if ev.key == keys['setOnsetI']:
@@ -1527,14 +1536,14 @@ class ObsPyck(QtGui.QMainWindow):
                 return
 
         if ev.key == keys['delPick']:
-            if phase_type in SEISMIC_PHASES:
+            if phase_type in self.seismic_phases:
                 self.delPick(pick)
                 self.updateAllItems()
                 self.redraw()
                 return
 
         if ev.key == keys['setPickError']:
-            if phase_type in SEISMIC_PHASES:
+            if phase_type in self.seismic_phases:
                 if pick is None or not pick.time:
                     return
                 pick.setErrorTime(self.time_rel2abs(pickSample))
@@ -1702,12 +1711,12 @@ class ObsPyck(QtGui.QMainWindow):
             self.multicursor.visible = False
             # reuse this event as setPick / setPickError event
             if ev.button == 1:
-                if str(self.widgets.qComboBox_phaseType.currentText()) in SEISMIC_PHASES:
+                if str(self.widgets.qComboBox_phaseType.currentText()) in self.seismic_phases:
                     ev.key = self.keys['setPick']
                 else:
                     ev.key = self.keys['setMagMin']
             elif ev.button == 3:
-                if str(self.widgets.qComboBox_phaseType.currentText()) in SEISMIC_PHASES:
+                if str(self.widgets.qComboBox_phaseType.currentText()) in self.seismic_phases:
                     ev.key = self.keys['setPickError']
                 else:
                     ev.key = self.keys['setMagMax']
@@ -1773,7 +1782,10 @@ class ObsPyck(QtGui.QMainWindow):
 
     def updateMulticursorColor(self):
         phase_name = str(self.widgets.qComboBox_phaseType.currentText())
-        color = PHASE_COLORS[phase_name]
+        if phase_name == 'Mag':
+            color = self._magnitude_color
+        else:
+            color = self.seismic_phases[phase_name]
         for l in self.multicursor.lines:
             l.set_color(color)
 
@@ -3163,7 +3175,7 @@ class ObsPyck(QtGui.QMainWindow):
                         res_info += '  %s' % pick.polarity
                     axEM.text(coords.longitude, coords.latitude, res_info,
                               va='top', family='monospace',
-                              color=PHASE_COLORS[pick.phase_hint])
+                              color=self.seismic_phases[pick.phase_hint])
             for sm in self.catalog[0].station_magnitudes:
                 if sm.waveform_id.station_code != sta:
                     continue
@@ -3179,7 +3191,7 @@ class ObsPyck(QtGui.QMainWindow):
                 label = '\n' * (_i + 3) + \
                         '  %0.2f%s' % (sm.mag, chann_info)
                 axEM.text(coords.longitude, coords.latitude, label, va='top',
-                          family='monospace', color=PHASE_COLORS['Mag'])
+                          family='monospace', color=self._magnitude_color)
                 break
 
         if len(self.scatterMagLon) > 0:
@@ -3863,7 +3875,7 @@ class ObsPyck(QtGui.QMainWindow):
             alpha_line = 0.3
             alpha_span = 0.04
 
-        color = PHASE_COLORS[pick.phase_hint]
+        color = self.seismic_phases[pick.phase_hint]
         reltime = self.time_abs2rel(pick.time)
         ax.axvline(reltime, color=color,
                    linewidth=AXVLINEWIDTH,
@@ -3918,7 +3930,7 @@ class ObsPyck(QtGui.QMainWindow):
             self.error("Not displaying an amplitude pick set on raw count data.")
             return
         if main_axes:
-            color = PHASE_COLORS['Mag']
+            color = self._magnitude_color
         else:
             color = "gray"
 
@@ -4448,6 +4460,7 @@ def main():
             print "created example config file: {}".format(config_file)
     print "using config file: {}".format(config_file)
     config = SafeConfigParser(allow_no_value=True)
+    # make all config keys case sensitive
     config.optionxform = str
     config.read(config_file)
 
